--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:464221935281:ios:dd3d093dc87827c934b490",
-  "FIREBASE_PROJECT_ID": "tailortrade-b1047",
-  "GCM_SENDER_ID": "464221935281"
+  "GOOGLE_APP_ID": "1:622676426400:ios:c514b5b501e96178fc53c5",
+  "FIREBASE_PROJECT_ID": "tailortrade-2d89c",
+  "GCM_SENDER_ID": "622676426400"
 }
